# GvrSample

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/michael/gvrsamples/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/ShaderV2/: vss.glsl
app/src/main/assets/ShaderV3/: fss.glsl  vss.glsl
app/src/main/cpp/: Log.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  sample_jni.cpp
app/src/main/cpp/gl/: GLHelper.cpp  GLHelper.h  GLProgram.cpp  GLProgram.h
app/src/main/cpp/soil/: SOIL.c
app/src/main/cpp/util/: GLM.cpp  GLM.h
app/src/main/java/com/example/michael/gvrsamples/: MainActivity.java
app/src/main/java/com/example/michael/gvrsamples/renderer/: NativeRenderer.java
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/michael/gvrsamples/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
